aws_vpc.tf
resource "aws_vpc" "tfvpc" {
  cidr_block = "10.0.0.0/16"
  tags       = {
    Name = "mytfvpc"
  }
}
